--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
 .App {
-  text-align: center;
+  font-family: "Lato", sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+a {
+  text-decoration: none;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+a:hover {
+  color: #ffcb08;
+  text-decoration: none;
 }
 
-@keyframes App-logo-spin {
+.active {
+  color: #ffcb08;
+  text-shadow: 1px 1px 1px black;
+}
+
+.links {
+  column-gap: 2rem;
+}
+
+.links a {
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 1.2rem;
+}
+
+h1 {
+  width: 0;
+  overflow: hidden;
+  white-space: nowrap;
+  font-size: 2rem;
+  margin: 0 auto;
+  border-right: 0.15em solid #18bdec;
+  animation: typing 2s steps(38) 1s 1 normal both, blink 1s steps(1) infinite;
+  margin-bottom: 30px;
+}
+@keyframes typing {
   from {
-    transform: rotate(0deg);
+    width: 0;
   }
   to {
-    transform: rotate(360deg);
+    width: 60%;
+  }
+}
+@keyframes blink {
+  50% {
+    border-color: transparent;
   }
 }
