react router II Pokenmon v4 navbar color y logo

--- a/src/Style.css
+++ b/src/Style.css
@@ -13,8 +13,8 @@
   }
   
   .active {
-    color: #ffcb08;
-    text-shadow: 1px 1px 1px black;
+    color: red;
+    text-shadow: 1px 1px 1px white;
   }
   
   .links {
